# Talk2BI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: streamlit_app.py
src/.streamlit/: config.toml
src/agent/: agent.py
src/agent/utils/: prompt.py  tools.py
src/api/: route.py
src/utils/: astream.py  chat_db.py
